--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       { id: 'construction_completed', label: '工事完了', color: 'from-slate-600 to-slate-700', bg: 'bg-slate-50', badge: 'bg-slate-200 text-slate-700', icon: '🏁' },
     ];
 
-    const STORAGE_KEY = 'kanban_building_materials';
+    const API_URL = '/api/cards';
 
     // ─── Sample Data ───
     const SAMPLE_DATA = [
@@ -500,33 +500,18 @@
 
     // ─── Main App ───
     function App() {
-      const validStatusIds = new Set(STATUSES.map(s => s.id));
-      const [cards, setCards] = useState(() => {
-        try {
-          const saved = localStorage.getItem(STORAGE_KEY);
-          if (saved) {
-            const data = JSON.parse(saved);
-            if (Array.isArray(data) && data.length > 0) {
-              // 旧ステータスIDのデータが残っていたらリセット
-              const hasInvalidStatus = data.some(c => !validStatusIds.has(c.status));
-              if (hasInvalidStatus) {
-                localStorage.removeItem(STORAGE_KEY);
-                return SAMPLE_DATA;
-              }
-              return data;
-            }
-          }
-        } catch (e) { }
-        return SAMPLE_DATA;
-      });
-
+      const [cards, setCards] = useState([]);
+      const [loading, setLoading] = useState(true);
       const [searchQuery, setSearchQuery] = useState('');
-      const [modalCard, setModalCard] = useState(null); // null = closed, {} = new, {id:...} = edit
+      const [modalCard, setModalCard] = useState(null);
 
-      // Persist to localStorage
+      // サーバーからカード読み込み
       useEffect(() => {
-        localStorage.setItem(STORAGE_KEY, JSON.stringify(cards));
-      }, [cards]);
+        fetch(API_URL)
+          .then(res => res.json())
+          .then(data => { setCards(data); setLoading(false); })
+          .catch(err => { console.error('Load error:', err); setLoading(false); });
+      }, []);
 
       // Filter cards
       const filteredCards = useMemo(() => {
@@ -539,11 +524,19 @@
         );
       }, [cards, searchQuery]);
 
-      // Handlers
+      // ドラッグ＆ドロップ
       const handleDrop = useCallback((cardId, newStatus) => {
-        setCards(prev => prev.map(c =>
-          c.id === cardId ? { ...c, status: newStatus } : c
-        ));
+        setCards(prev => {
+          const card = prev.find(c => c.id === cardId);
+          if (!card) return prev;
+          const updated = { ...card, status: newStatus };
+          fetch(`${API_URL}/${cardId}`, {
+            method: 'PUT',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(updated)
+          }).catch(err => console.error('Update error:', err));
+          return prev.map(c => c.id === cardId ? updated : c);
+        });
       }, []);
 
       const handleCardClick = useCallback((card) => {
@@ -554,18 +547,31 @@
         setModalCard({ companyName: '', siteName: '', productName: '', constructionDate: '', arrivalDate: '', status: 'estimate_request', notes: '' });
       };
 
+      // 保存（新規 or 更新）
       const handleSave = (card) => {
-        setCards(prev => {
-          const exists = prev.find(c => c.id === card.id);
-          if (exists) {
-            return prev.map(c => c.id === card.id ? card : c);
-          }
-          return [...prev, card];
-        });
+        const exists = cards.find(c => c.id === card.id);
+        if (exists) {
+          fetch(`${API_URL}/${card.id}`, {
+            method: 'PUT',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(card)
+          }).catch(err => console.error('Update error:', err));
+          setCards(prev => prev.map(c => c.id === card.id ? card : c));
+        } else {
+          fetch(API_URL, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(card)
+          }).catch(err => console.error('Create error:', err));
+          setCards(prev => [...prev, card]);
+        }
         setModalCard(null);
       };
 
+      // 削除
       const handleDelete = (cardId) => {
+        fetch(`${API_URL}/${cardId}`, { method: 'DELETE' })
+          .catch(err => console.error('Delete error:', err));
         setCards(prev => prev.filter(c => c.id !== cardId));
         setModalCard(null);
       };
@@ -636,27 +642,36 @@
 
           {/* ─── Kanban Board ─── */}
           <main className="max-w-[1920px] mx-auto p-4">
-            {searchQuery && (
-              <div className="mb-3 text-sm text-gray-500">
-                「<span className="font-semibold text-gray-700">{searchQuery}</span>」の検索結果：
-                <span className="font-semibold text-blue-600">{filteredCards.length}件</span>
+            {loading ? (
+              <div className="flex flex-col items-center justify-center py-24">
+                <div className="animate-spin rounded-full h-12 w-12 border-4 border-blue-500 border-t-transparent mb-4"></div>
+                <p className="text-gray-500 font-medium">データを読み込み中...</p>
               </div>
-            )}
+            ) : (
+              <>
+                {searchQuery && (
+                  <div className="mb-3 text-sm text-gray-500">
+                    「<span className="font-semibold text-gray-700">{searchQuery}</span>」の検索結果：
+                    <span className="font-semibold text-blue-600">{filteredCards.length}件</span>
+                  </div>
+                )}
 
-            <div className="flex gap-4 overflow-x-auto pb-4">
-              {STATUSES.map(status => {
-                const columnCards = filteredCards.filter(c => c.status === status.id);
-                return (
-                  <KanbanColumn
-                    key={status.id}
-                    status={status}
-                    cards={columnCards}
-                    onCardClick={handleCardClick}
-                    onDrop={handleDrop}
-                  />
-                );
-              })}
-            </div>
+                <div className="flex gap-4 overflow-x-auto pb-4">
+                  {STATUSES.map(status => {
+                    const columnCards = filteredCards.filter(c => c.status === status.id);
+                    return (
+                      <KanbanColumn
+                        key={status.id}
+                        status={status}
+                        cards={columnCards}
+                        onCardClick={handleCardClick}
+                        onDrop={handleDrop}
+                      />
+                    );
+                  })}
+                </div>
+              </>
+            )}
           </main>
 
           {/* ─── Footer ─── */}
